Makes PDAs have the functionality of cheap tablets.
destroying fixed

--- a/nano/templates/pda.tmpl
+++ b/nano/templates/pda.tmpl
@@ -70,6 +70,7 @@ Used In File(s): \code\game\objects\items\devices\PDA\PDA.dm
                 {{:helper.link('Messenger', data.new_Message ? 'mail-closed' : 'mail-open', {'choice' : "2"}, null, 'fixedLeftWide')}}
                 {{:helper.link('Crew Manifest', 'contact', {'choice' : "41"}, null, 'fixedLeftWide')}}
 				{{:helper.link('News', data.new_News ? 'mail-closed' : 'mail-open', {'choice' : "6"}, null, 'fixedLeftWide')}}
+				{{:helper.link('NT Apps', 'circle-arrow-s', {'choice' : "apps"}, null, 'fixedLeftWide')}}
             </div>
         </div>
         <br>
