--- a/nano/templates/supply.tmpl
+++ b/nano/templates/supply.tmpl
@@ -8,11 +8,11 @@
 <div class="item">
 	{{:helper.link('Browse Goods', 'cart', {'set_screen' : 1}, data.screen == 1 ? 'selected' : null)}}
 	{{:helper.link('View Statistics', 'calculator', {'set_screen' : 2}, data.screen == 2 ? 'selected' : null)}}
-	{{:helper.link('Shuttle Control', 'bullet', {'set_screen' : 3}, data.screen == 3 ? 'selected' : null)}}
+	{{:helper.link('Controls', 'bullet', {'set_screen' : 3}, data.screen == 3 ? 'selected' : null)}}
 	{{:helper.link('Browse Orders', 'check', {'set_screen' : 4}, data.screen == 4 ? 'selected' : null)}}
 </div>
 <hr>
-<span>Current balance: {{:data.credits}} Credits</span>
+<span>Current balance: {{:data.credits}} {{:data.currency}}</span>
 <hr>
 {{if data.screen == 1}}
 	{{for data.categories}}
@@ -24,7 +24,7 @@
 			{{for data.possible_purchases}}
 				<tr>
 				<td>{{:value.name}}
-				<td>{{:value.cost}} Credits
+				<td>{{:value.cost}} {{:data.currency}}
 				<td>{{:helper.link('Order', null, {'order' : value.ref})}}
 			{{/for}}
 		</table>
@@ -32,10 +32,10 @@
 {{else data.screen == 2}}
 	<div class="item">
 		<div class="itemLabel">
-			Total credits generated today:
+			Generated today:
 		</div>
 		<div class="itemContent">
-			{{:data.total_credits}} Cr.
+			{{:data.total_credits}} {{:data.currency_short}}
 		</div>
 	</div>
 	<div class="item">
@@ -43,55 +43,55 @@
 			Standard allocation:
 		</div>
 		<div class="itemContent">
-			{{:data.credits_passive}} Cr.
+			{{:data.credits_passive}} {{:data.currency_short}}
 		</div>
 	</div>
 	<div class="item">
 		<div class="itemLabel">
-			Credits from recycled crates:
+			{{:data.currency}} from recycled crates:
 		</div>
 		<div class="itemContent">
-			{{:data.credits_crates}} Cr.
+			{{:data.credits_crates}} {{:data.currency_short}}
 		</div>
 	</div>
 	<div class="item">
 		<div class="itemLabel">
-			Credits from phoron exports:
+			{{:data.currency}} from phoron exports:
 		</div>
 		<div class="itemContent">
-			{{:data.credits_phoron}} Cr.
+			{{:data.credits_phoron}} {{:data.currency_short}}
 		</div>
 	</div>
 	<div class="item">
 		<div class="itemLabel">
-			Credits from platinum exports:
+			{{:data.currency}} from platinum exports:
 		</div>
 		<div class="itemContent">
-			{{:data.credits_platinum}} Cr.
+			{{:data.credits_platinum}} {{:data.currency_short}}
 		</div>
 	</div>
 	<div class="item">
 		<div class="itemLabel">
-			Credits from uploaded antibody data:
+			{{:data.currency}} from uploaded antibody data:
 		</div>
 		<div class="itemContent">
-			{{:data.credits_virology}} Cr.
+			{{:data.credits_virology}} {{:data.currency_short}}
 		</div>
 	</div>
 	<div class="item">
 		<div class="itemLabel">
-			Credits from uploaded good explorer points:
+			{{:data.currency}} from uploaded good explorer points:
 		</div>
 		<div class="itemContent">
-			{{:data.credits_gep}} Cr.
+			{{:data.credits_gep}} {{:data.currency_short}}
 		</div>
 	</div>
 	<div class="item">
 		<div class="itemLabel">
-			Credit bonus for paperwork handling:
+			Point bonus for paperwork handling:
 		</div>
 		<div class="itemContent">
-			{{:data.credits_paperwork}} Cr.
+			{{:data.credits_paperwork}} {{:data.currency_short}}
 		</div>
 	</div>
 	<div class="item">
@@ -105,7 +105,7 @@
 {{else data.screen == 3}}
 	<div class="item">
 		<div class="itemLabel">
-			Current shuttle location:
+			Current {{:data.shuttle_name}} location:
 		</div>
 		<div class="itemContent">
 			{{:data.shuttle_location}}
@@ -113,7 +113,7 @@
 	</div>
 	<div class="item">
 		<div class="itemLabel">
-			Current shuttle status:
+			Current {{:data.shuttle_name}} status:
 		</div>
 		<div class="itemContent">
 			{{:data.shuttle_status}}
@@ -139,7 +139,7 @@
 					<td>{{:value.object}}
 					<td>{{:value.orderer}}
 					<td>{{:value.reason}}
-					<td>{{:value.cost}} Cr.
+					<td>{{:value.cost}} {{:data.currency_short}}
 					<td>{{:helper.link('Approve', 'check', {'approve_order' : value.id}, value.cost > data.credits ? 'disabled' : null )}}{{:helper.link('Deny', 'cancel', {'deny_order' : value.id})}}
 				{{/for}}
 			</table>
@@ -154,7 +154,7 @@
 					<td>{{:value.object}}
 					<td>{{:value.orderer}}
 					<td>{{:value.reason}}
-					<td>{{:value.cost}} Cr.
+					<td>{{:value.cost}} {{:data.currency_short}}
 					<td>{{:helper.link('Cancel', 'cancel', {'cancel_order' : value.id})}}
 				{{/for}}
 			</table>
@@ -169,7 +169,7 @@
 					<td>{{:value.object}}
 					<td>{{:value.orderer}}
 					<td>{{:value.reason}}
-					<td>{{:value.cost}} Cr.
+					<td>{{:value.cost}} {{:data.currency_short}}
 					<td>{{:helper.link('Delete', 'cancel', {'delete_order' : value.id})}}
 				{{/for}}
 			</table>
